# pyirecovery

./: .gitignore  README.md  pyproject.toml
pyirecovery/: __init__.py  __main__.py  no_backend_fix.py
